Improve 401 responses and dev debug token
