# public/docs/openapi.json
@@ -14,6 +14,16 @@
                 "summary": "Получить все заметки",
                 "operationId": "7aaece6530f7090088fa2ec2b3d95ab7",
                 "responses": {
+                    "401": {
+                        "description": "Неавторизован",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorResponse"
+                                }
+                            }
+                        }
+                    },
                     "200": {
                         "description": "Список заметок",
                         "content": {
@@ -63,6 +73,16 @@
                     }
                 },
                 "responses": {
+                    "401": {
+                        "description": "Неавторизован",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorResponse"
+                                }
+                            }
+                        }
+                    },
                     "201": {
                         "description": "Заметка создана",
                         "content": {
@@ -124,6 +144,16 @@
                     }
                 ],
                 "responses": {
+                    "401": {
+                        "description": "Неавторизован",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorResponse"
+                                }
+                            }
+                        }
+                    },
                     "200": {
                         "description": "Заметка",
                         "content": {
@@ -193,6 +223,16 @@
                     }
                 },
                 "responses": {
+                    "401": {
+                        "description": "Неавторизован",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorResponse"
+                                }
+                            }
+                        }
+                    },
                     "200": {
                         "description": "Заметка обновлена",
                         "content": {
@@ -262,6 +302,16 @@
                     }
                 ],
                 "responses": {
+                    "401": {
+                        "description": "Неавторизован",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorResponse"
+                                }
+                            }
+                        }
+                    },
                     "200": {
                         "description": "Заметка удалена",
                         "content": {
